--- a/my-app2/src/static/css/style.css
+++ b/my-app2/src/static/css/style.css
@@ -146,7 +146,7 @@ a:hover {
   border-bottom: 1px solid rgba(0, 0, 0, 0.4);
 }
 
-.btn-primary {
+.btn-primary1 {
   height: 50px;
   padding-right: 20px;
   padding-left: 20px;
@@ -158,10 +158,14 @@ a:hover {
   -o-box-shadow: -2px 10px 20px -1px rgba(51, 204, 204, 0.4);
   box-shadow: -2px 10px 20px -1px rgba(51, 204, 204, 0.4);
 }
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active {
+.btn-primary1:hover, .btn-primary1:focus, .btn-primary1:active {
   color: #ffffff;
   background: #47d1d1 !important;
   outline: none;
+}
+.btn-primary1.focus,.btn-primary1:focus,.btn-primary1:hover {
+    color: #333;
+    text-decoration: none
 }
 
 input, textarea {
