--- a/my-app2/src/back/static/my/css/classfication.css
+++ b/my-app2/src/back/static/my/css/classfication.css
@@ -10,4 +10,10 @@
 .search{
 	padding:3px;
 	margin:5px;
+	background-color: #ffffff;
+}
+.addButton{
+	padding: 10px;
+	margin: 10px;
+	float: right;
 }
