--- a/my-app2/src/back/static/my/css/classfication.css
+++ b/my-app2/src/back/static/my/css/classfication.css
@@ -33,3 +33,40 @@
     border: 1px solid #ccc;
     height: 450px !important;
 }
+.font-red{
+	color: #FF0000;
+}
+.f-r{
+	float: right;
+}
+.f-l{
+	float: left;
+}
+.inline{
+	display:inline;
+	display: inline-block;
+}
+.avatar-uploader > .ant-upload {
+  width: 128px;
+  height: 128px;
+}
+.btnpic{
+	height: 150px;
+	width: 150px;
+}
+.form{
+	margin: 10px;
+}
+.userMain{
+	margin:0 auto;
+	width: 600px;
+	margin-top: 60px;
+	background: #ffffff ;
+}
+.backgf{
+	background: #ffffff ;
+}
+
+.ofc{
+	object-fit: contain;
+}
