--- a/my-app2/src/back/static/my/css/home.css
+++ b/my-app2/src/back/static/my/css/home.css
@@ -7,3 +7,13 @@
 	background-color: rgb(0, 21, 41);
 	width: 200px;
 }
+
+.statis {
+	margin: 20px;
+	padding: 80px;
+	background-color: #ffffff;
+	padding: 10px;
+	text-align:center;
+	height: 150px;
+    vertical-align:middle;
+}
