--- a/my-app2/src/static/my/css/album.css
+++ b/my-app2/src/static/my/css/album.css
@@ -9,6 +9,11 @@
 	margin:30px;
 	float: left;
 }
+.mCard{
+	width: 100%;
+	margin:0 auto;
+	padding-top: 30px;
+}
 .img{
 	padding: 10px;
 	width: 150px;
@@ -35,6 +40,17 @@
 .albumTitle{
 	padding: 10px;
 	width: 300;
+}
+.MimageD{
+	width:100%;
+}
+.MimageD::before {
+  padding-top: 100%;
+}
+.Mimag{
+	padding:10px;
+	width:100%;
+	object-fit: cover;
 }
 .imageD{
 		overflow:hidden;
